<resources>
    <!-- API Keys -->
    <string name="google_api_key">AIzaSyDwfV16haFpHVM5CzoVcUCXRsLzDlEuR0c</string>



    <string name="app_name">Bright Skies</string>
    <string name="discover_your_bright_skies">Discover Your Bright Skies</string>
    <string name="bright_skies">Bright Skies</string>
    <string name="image_description">Image</string>
    <string name="title_activity_map_page">Map</string>
    <string name="enter_location">Enter Your Location</string>
    <string name="navigation">nav</string>
    <string name="location_search">Location Search</string>
    <string name="energy_calculator">Energy Calculator</string>
    <string name="information">Information</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="location_results">Location Results</string>
    <string name="temporary_text">Temporary Text</string>

    <!-- About Us strings-->
    <string name="about_us_page1">Comprised of Zack Doll, Jonah Douglas, Melody Grappo, and Piper Wolters,
        our team was formed in Winter 2020 at Western Washington University.</string>
    <string name="about_us_page2">We are passionate individuals about computer science and the planet. We hope to use
        technology to change the world for the better. This application is part of that goal.</string>
    <string name="about_us_page3">This app aims to inform users about solar energy and their solar potential,
        and ultimately encourages more people to switch to this renewable energy source.</string>
    <string name="about_us_page4">Please contact brightskies@gmail.com if you encounter any issues with this app.</string>
    <string name="first_welcome_page">First Welcome Page</string>

    <string name="input_label">Input Label</string>
    <string name="empty"> </string>
    <string name="sub">Sub</string>

    <!-- welcome screen(s) strings -->
    <string name="slide_1_desc">Protecting the Earth</string>
    <string name="slide_2_desc">Money in your Pocket</string>
    <string name="slide_3_desc">Why go Solar?</string>
    <string name="slide_3_desc_2">Discover Your Bright Skies</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
<!--    <string name="got_it">Discover!</string>-->

    <string name="menu_about_us">About Us</string>
    <string name="menu_calculator">Energy Calculator</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_information">Information</string>
    <string name="menu_results">Results</string>
    <string name="menu_map">Map</string>
    <string name="menu_category_info">App Information</string>

    <string name="nrel_api_key">4eE4mdyQSmbhnkpcNjv9FIjen1ZgLXf0cGSxQReU</string>
    <string name="nrel_url_base">https://developer.nrel.gov/api/solar/solar_resource/v1.json?api_key=</string>
</resources>
