<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="352dp"
        android:layout_height="87dp"
        android:layout_marginTop="276dp"
        android:fontFamily="serif"
        android:text="@string/about_us_page4"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="352dp"
        android:layout_height="87dp"
        android:layout_marginTop="176dp"
        android:fontFamily="serif"
        android:text="@string/about_us_page3"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="353dp"
        android:layout_height="79dp"
        android:layout_marginTop="84dp"
        android:fontFamily="serif"
        android:text="@string/about_us_page2"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="232dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/bright_skies"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="351dp"
        android:layout_height="63dp"
        android:layout_marginTop="11dp"
        android:fontFamily="serif"
        android:text="@string/about_us_page1"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FF9800"
        android:onClick="goToNavigationOptions"
        android:text="@string/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/information"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="215dp"
        android:layout_height="166dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/bright_skies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/solar_energy1" />

</androidx.constraintlayout.widget.ConstraintLayout>