<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="93dp"
        android:fontFamily="casual"
        android:text="@string/bright_skies"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/button"
        android:layout_width="283dp"
        android:layout_height="59dp"
        android:layout_marginTop="252dp"
        android:layout_marginBottom="53dp"
        android:background="#FF5722"
        android:fontFamily="casual"
        android:onClick="enterApp"
        android:text="@string/discover_your_bright_skies"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.922" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="389dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/image_description"
        android:onClick="enterApp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/solar_test2" />

</androidx.constraintlayout.widget.ConstraintLayout>